# Noravue

./: README.md  app.py  app_session.py  cleanup_database.py  clear_data.py  launch_session_app.py  main.py  main_session.py  models.py  nlp_analyzer.py  pyproject.toml  rebuild_app.py  reset_app.py  screenshot_manager.py  session_manager.py
instance/: screenshots.db
static/css/: custom.css  transitions.css
static/js/: carousel.js  smooth-transitions.js
templates/: index.html  layout.html  privacy.html  settings.html
